# NES

./: .gitignore  CMakeLists.txt
include/: cpu.h  nes.h  rom_reader.h  status_register.h  tileset.h  utils.h
include/cpu/: cpu.h  cpu_addressing_modes.h  cpu_opcodes.h  cpu_status_register.h
src/: cpu.c  main.c  rom_file.c  rom_reader.c  status_register.c  tileset.c  utils.c
src/cpu/: cpu.c  cpu_addressing_modes.c  cpu_opcodes.c  cpu_status_register.c
temp/include/: color_palette.h  nes.h  ppu.h  rom_file.h  tileset.h
temp/src/: color_palette.c  nes.c  rom_file.c  tileset.c
